--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "lunar-article/addon",
-    "version": "0.1.2",
+    "version": "0.1.4",
     "type": "project",
     "description": "Article functionality for Lunar.",
     "keywords": [
@@ -29,7 +29,7 @@
     ],
     "require": {
         "php": "^8.0",
-        "lunarphp/lunar": "^0.6|^0.7|^0.8",
+        "lunarphp/lunar": "^0.6|^0.7|^0.8|^1.0",
         "livewire/livewire": "^2.0"
     },
     "require-dev": {
